# crypto

./: .editorconfig  .gitignore  CONTRIBUTING.md  CONTRIBUTING_CN.md  README.md  Readme_CN.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: ci.yml  release.yml
app/: build.gradle.kts
app/src/androidTest/java/mobi/timon/android/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/mobi/timon/android/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-zh/: strings.xml
app/src/test/java/mobi/timon/android/: ExampleUnitTest.kt
crypto/: README.md  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
crypto/src/androidTest/java/mobi/timon/crypto/: AsymmetricInstrumentedTest.kt  BlsInstrumentedTest.kt  HashBenchmark.kt  (+5 more)
crypto/src/main/cpp/: CMakeLists.txt  enc_jni.c
crypto/src/main/go/: aead.go  argon2.go  bcrypt.go  bls.go  go.h  go.mod  go.sum  hash.go  hmac.go  keccak_ripemd.go  secp256k1.go  sha512.go  x509_utils.go  xts.go
crypto/src/main/go/lib/arm64-v8a/: libencgo.h
crypto/src/main/go/lib/x86/: libencgo.h
crypto/src/main/go/lib/x86_64/: libencgo.h
enc/: README.md  build.gradle.kts  enc.md
enc/src/main/cpp/: enc_jni.c
enc/src/main/go/: cbc.go  chacha20poly1305.go  des_cbc.go  ecdsa.go  ecdsa_x509.go  ed25519.go  go  go.mod  hash_extra.go  hmac.go  hmac_sha512.go  kdf_advanced.go  main.go  random.go  rsa.go  stream.go  utils.go  xts.go
enc/src/main/go/lib/armeabi-v7a/: libencgo.h
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+60 files in other folders)
